@@ -1,6 +1,8 @@
 1.5.0 /
 [Alexandr Topilski]
 - Pub/Sub dialog
+- DECR UI handling
+- DECRBY UI handling
 
 1.4.1 / January 12, 2017
 [Alexandr Topilski]
