@@ -297,6 +297,47 @@ common::Error CommandsApi::Hgetall(internal::CommandHandler* handler,
   return common::Error();
 }
 
+common::Error CommandsApi::Decr(internal::CommandHandler* handler,
+                                int argc,
+                                const char** argv,
+                                FastoObject* out) {
+  UNUSED(argc);
+
+  NKey key(argv[0]);
+  DBConnection* redis = static_cast<DBConnection*>(handler);
+  long long result = 0;
+  common::Error err = redis->Decr(key, &result);
+  if (err && err->isError()) {
+    return err;
+  }
+
+  common::FundamentalValue* val = common::Value::createLongLongIntegerValue(result);
+  FastoObject* child = new FastoObject(out, val, redis->Delimiter());
+  out->AddChildren(child);
+  return common::Error();
+}
+
+common::Error CommandsApi::DecrBy(internal::CommandHandler* handler,
+                                  int argc,
+                                  const char** argv,
+                                  FastoObject* out) {
+  UNUSED(argc);
+
+  NKey key(argv[0]);
+  int incr = common::ConvertFromString<int>(argv[1]);
+  DBConnection* redis = static_cast<DBConnection*>(handler);
+  long long result = 0;
+  common::Error err = redis->DecrBy(key, incr, &result);
+  if (err && err->isError()) {
+    return err;
+  }
+
+  common::FundamentalValue* val = common::Value::createLongLongIntegerValue(result);
+  FastoObject* child = new FastoObject(out, val, redis->Delimiter());
+  out->AddChildren(child);
+  return common::Error();
+}
+
 common::Error CommandsApi::Incr(internal::CommandHandler* handler,
                                 int argc,
                                 const char** argv,
