@@ -1,6 +1,12 @@
 1.5.0 /
 [Alexandr Topilski]
 - [Redis] Pub/Sub dialog
+- [Redis] DECR UI handling
+- [Redis] DECRBY UI handling
+- [Memcached] INCR UI handling
+- [Memcached] DECR UI handling
+- [Memcached] Append UI handling
+- [Memcached] Prepend UI handling
 
 1.4.1 / January 12, 2017
 [Alexandr Topilski]
